# Lumadi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
Logger/include/lumadi/: README.md
Logger/include/lumadi/detail/logger/: ILogFormater.h  ILogger.h  basicLogFormater.h  log.h  logFileHandler.h  logHandlerBase.h  logger.cpp  logger.h
Logger/src/: basicLogFormater.cpp  logFileHandler.cpp  logHandlerBase.cpp
Logger/tests/: CMakeLists.txt  test_basicLogFormater.cpp  test_log.cpp  test_logFileHandler.cpp  test_logger.cpp
ThreadPool/: CMakeLists.txt
ThreadPool/cmake/: Lumadi_ThreadPoolConfig.cmake.in  ThreadPoolConfig.cmake.in
ThreadPool/include/lumadi/: IQueue.h  README.md  threadPool.h
ThreadPool/include/lumadi/detail/threadPool/: IQueue.h  IStealingStrategy.h  concepts.h  roundRobinStealingStrategy.h  staticThreadPool.h  task.h  workStealingQueue.h
ThreadPool/src/: workStealingQueue.cpp
ThreadPool/tests/: CMakeLists.txt  test_roundRobinStealingStrategy.cpp  test_staticThreadPool.cpp  test_workStealingQueue.cpp
cmake/: LumadiConfig.cmake.in
include/LumadiThreadPool/: IThreadPool.h  LumadiThreadPool.h  README.txt  concepts.h
src/: workStealingQueue.cpp
tests/: test_staticThreadPool.cpp  test_workStealingQueue.cpp
